# sample_components

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Dockerfile  Makefile  README.md  ci.yml  falke8.txt  flake8.txt  index.html  mkdocs.yml  objects.inv  pylint.md  pyproject.toml  release.yml  requirements.txt  setup.cfg  sonar-project.properties
.devcontainer/: Dockerfile  devcontainer.json  post-install.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  pr-labeler.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: blank.yml  ci.yml  release.yml
docs/: docstring.md
docstring/: index.html
notebooks/: 01_sample_nb.ipynb
sample_components/: __main__.py  example.py
search/: search_index.json
tests/: test_example.py
