[tool.poetry]
name = "sample_components"
version = "0.0.1"
description = ""
authors = ["Aritra Biswas <40533894+pandalearnstocode@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "sample_components"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.3"
jupyter = "^1.0.0"
notebook = "^6.5.1"
ipykernel = "^6.16.1"
pytest-cov = "^4.0.0"
coverage = "^6.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
