[tool.poetry]
name = "sample_components"
version = "0.3.1"
description = ""
authors = ["Aritra Biswas <40533894+pandalearnstocode@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "sample_components"}]
repository = "https://github.com/pandalearnstocode/sample_components"
homepage = "https://github.com/pandalearnstocode/sample_components"


[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.3"
jupyter = "^1.0.0"
notebook = "^6.5.2"
ipykernel = "^6.16.1"
pytest-cov = "^4.0.0"
coverage = "^6.5.0"
black = "^22.10.0"
isort = "^5.10.1"
mypy = "^0.982"
bandit = "^1.7.4"
typer = {extras = ["all"], version = "^0.6.1"}
flake8 = "^5.0.4"
loguru = "^0.6.0"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}
python-semantic-release = "^7.32.2"
pre-commit = "^2.20.0"
pylint = "^2.15.5"
pyupgrade = "^3.1.0"
safety = "^2.3.1"
darglint = "^1.8.1"
mypy-extensions = "^0.4.3"
mkdocs-material = "^8.5.7"
mkdocstrings-python = "^0.7.1"
mike = "^1.1.2"
mkdocs = "^1.4.1"

[tool.poetry.scripts]
"sample_components" = "sample_components.__main__:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py38"]
line-length = 120
color = true

exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.isort]
py_version = 38
line_length = 120
known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4
color_output = true


[tool.mypy]
enable_error_code = [
    "ignore-without-code"
]
python_version = 3.8
pretty = true
show_traceback = true
color_output = true
allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true


[tool.pytest.ini_options]
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]

[tool.coverage.run]
source = ["tests"]

[coverage.paths]
source = "sample_components"

[coverage.run]
branch = true

[coverage.report]
fail_under = 50
show_missing = true

[tool.bandit]
targets = "sample_components"
exclude = ".venv"


[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "init"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default
